examples/datalog/12_errors/43_recursive_negation.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_rec_neg
Knowledge graph 'test_rec_neg' created.
Switched to knowledge graph: test_rec_neg
> .kg use test_rec_neg
Switched to knowledge graph: test_rec_neg
> +base[(1,), (2,)].
Inserted 2 fact(s) into 'base'.
> +bad(X) :- base(X), !bad(X).
Script error: Failed to register rule: Unstratified negation: Rule 'bad' negates itself (!bad in body). Self-negation is not supported.
